<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="data"
            type="com.maxot.contactbook.data.db.entity.Contact" />

        <variable
            name="handler"
            type="com.maxot.contactbook.ui.window.edit.EditContactFragment.InteractionHandler" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/et_name"
                android:focusedByDefault="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_marginStart="@dimen/margin_medium_small"
                android:layout_marginTop="@dimen/margin_medium_small"
                android:layout_marginEnd="@dimen/margin_medium_small"
                android:hint="@string/name"
                android:text="@{data.firstName}" />

            <EditText
                android:id="@+id/et_last_name"
                android:lines="1"
                android:maxLines="1"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_small"
                android:layout_marginTop="@dimen/margin_medium_small"
                android:layout_marginEnd="@dimen/margin_medium_small"
                android:hint="@string/last_name"
                android:text="@{data.secondName}" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_small"
                android:layout_marginTop="@dimen/margin_medium_small"
                android:layout_marginEnd="@dimen/margin_medium_small"
                android:text="@string/emails"
                android:textSize="@dimen/text_size_medium_big"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_emails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <Button
                android:id="@+id/btn_add_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium_small"
                android:onClick="@{() -> handler.onNewEmailClick()}"
                android:text="@string/add_email" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium_small"
                android:layout_marginTop="@dimen/margin_medium_small"
                android:layout_marginEnd="@dimen/margin_medium_small"
                android:text="@string/phones"
                android:textSize="@dimen/text_size_medium_big"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_phones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <Button
                android:id="@+id/btn_new_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium_small"
                android:onClick="@{() -> handler.onNewPhoneClick()}"
                android:text="@string/new_phone_number" />

            <Button
                android:id="@+id/btn_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium_small"
                android:onClick="@{() -> handler.onSaveClick()}"
                android:text="@string/save" />

        </LinearLayout>

    </ScrollView>


</layout>